# kdiff-ext

./: AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  Doxyfile  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.files  configure.in  configure.in.in  kdiff-ext.kdevelop  kdiff-ext.spec  kdiffext.kdevelop  log.txt  subdirs
.github/: FUNDING.yml
.github/workflows/: release.yml
admin/: am_edit
config/: CMakeLists.txt
config/include/: config.h
config/src/: config.cpp
diff-ext/: CMakeLists.txt  Makefile.am  Makefile.in  resources.qrc
diff-ext-config/: CMakeLists.txt  resources.qrc
diff-ext-config/src/: aboutdialog.cpp  aboutdialog.h  diff-ext-config.cpp  diff-ext-config.h  diff-ext-config.ui  main.cpp
diff-ext/icons/: CMakeLists.txt  Makefile.in
diff-ext/src/: CMakeLists.txt  Makefile.am  Makefile.in  diff-ext.cpp  diff-ext.h  diff-ext.json  kdiff-ext.desktop  kdiffext.cpp  kdiffext.h  kdiffext.lsm  logging.cpp  logging.h
doc/: CMakeLists.txt  Makefile.am  Makefile.in
doc/en/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.docbook
po/: Makefile.am  Makefile.in  da.po  de.po  es.po  fr.po  gl.po  it.po  kdiff-ext.pot  nb.po  pl.po  pt.po  pt_BR.po  ru.po  uk.po
settings/: CMakeLists.txt  Makefile.am  Makefile.in  kdiffext.kcfg  settings.cpp  settings.h  settings.kcfgc
setup/: CMakeLists.txt  Makefile.in
setup/src/: CMakeLists.txt  Makefile.am  Makefile.in  diff.cpp  diff.h  diff3.cpp  diff3.h  general.cpp  general.ui  general_base.cpp  general_base.h  kdiffextsetup.desktop  kdiffextsetup.lsm  kdiffextsetupui.rc  main.cpp  main.h  mainwidget.cpp  mainwidget.h  ui_base.cpp  ui_base.ui
